Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 <ol>
 <li><a href="http://mozillanativo.org/que-es-mozilla-nativo">¿Qué es mozilla Nativo?</a></li>
 <li><a href="https://es.wikipedia.org/wiki/Localizaci%C3%B3n_de_idiomas">¿Qué es localización?</a></li>
-<li>http://mozillanativo.org/involucrate </li>
+<li><a href="http://mozillanativo.org/involucrate">Preguntas frecuentes: ¿Qué se necesita para traducir Mozilla a una lengua?</a></li>
+<li><a href="https://l10n.mozilla.org/">Mozilla in your language</a></li>
 </ol>
 
 <h2>
@@ -64,17 +65,16 @@ destinado a los localizadores de software libre como Firefox.
 <a id="algunas-de-las-características-que-hacen-de-pootle-una-herramienta-ágil" class="anchor" href="#algunas-de-las-caracter%C3%ADsticas-que-hacen-de-pootle-una-herramienta-%C3%A1gil" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Algunas de las características que hacen de Pootle una herramienta ágil</h3>
 
 <ul>
-<li>1. • Fuera de línea o en línea
- Los localizadores trabajan en línea o pueden descargar archivos y localizar cuando la conexión a</li>
-<li>1. internet es relativamente baja, y posteriormente sincronizar las líneas con el repositorio general.</li>
-<li>1. • Memorias de Traducción
+<li>1. • <strong>Fuera de línea o en línea:</strong>
+ Los localizadores trabajan en línea o pueden descargar archivos y localizar cuando la conexión a internet es relativamente baja, y posteriormente sincronizar las líneas con el repositorio general.</li>
+<li>2. • <strong>Memorias de Traducción:</strong>
 Encuentra traducciones estrechamente relacionados desde un anterior trabajo para ahorrar tiempo y garantizar la coherencia en toda la obra a localizar.</li>
-<li>1. • Terminología
+<li>3. • <strong>Terminología:</strong>
 Sugerencias de terminología incorporadas garantizan traducciones consistentes.</li>
 </ul>
 
-<h3>
-<a id="vista-principal-de-un-proyecto-en-pootle" class="anchor" href="#vista-principal-de-un-proyecto-en-pootle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vista principal de un proyecto en Pootle</h3>
+<h2>
+<a id="vista-principal-de-un-proyecto-en-pootle" class="anchor" href="#vista-principal-de-un-proyecto-en-pootle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vista principal de un proyecto en Pootle</h2>
 
 <p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/ProjectPootle.png" alt="Proyecto en Pootle"></p>
 
