Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,8 +78,57 @@ Sugerencias de terminología incorporadas garantizan traducciones consistentes.<
 
 <p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/ProjectPootle.png" alt="Proyecto en Pootle"></p>
 
-<p>Comenzando a localizar con Pootle
-<img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/IniciandoL10n.png" alt="Iniciando"></p>
+<h1>
+<a id="comenzando-a-localizar-con-pootle" class="anchor" href="#comenzando-a-localizar-con-pootle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comenzando a localizar con Pootle</h1>
+
+<p>Comienza creando una cuenta en <a href="https://mozilla.locamotion.org/">Pootle</a></p>
+
+<h2>
+<a id="ejemplo-de-la-interfaz-de-localización" class="anchor" href="#ejemplo-de-la-interfaz-de-localizaci%C3%B3n" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ejemplo de la interfaz de localización</h2>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/IniciandoL10n.png" alt="Iniciando"></p>
+
+<h1>
+<a id="localizando-sin-conexión" class="anchor" href="#localizando-sin-conexi%C3%B3n" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Localizando sin conexión</h1>
+
+<h3>
+<a id="si-no-cuentas-con-una-buena-conexión-una-opción-para-localizar-en-modo-offline-es-poedit" class="anchor" href="#si-no-cuentas-con-una-buena-conexi%C3%B3n-una-opci%C3%B3n-para-localizar-en-modo-offline-es-poedit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Si no cuentas con una buena conexión, una opción para localizar en modo offline es PoEdit.</h3>
+
+<p>¿Qué es PoEdit?
+Poedit (antes poEdit) es un editor libre, abierto y multiplataforma de catálogos de Gettext usado en el proceso de localización en nuestro caso del navegador Firefox. PoEdit no traduce como lo haría Pootle, sin embargo es una excelente herramienta a diferencia de editores como Bloc de Notas o Sublime Text. Es decir, nos presentará unas cadenas de caracteres en un idioma  y somos nosotros los que debemos traducirlas al idioma deseado cosa que no sucede con editores convecionales.</p>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/sublime.png" alt="Vista de un archivo de cadenas para localizar con editores como Sublime"></p>
+
+<h1>
+<a id="comienza-descargando-poedit" class="anchor" href="#comienza-descargando-poedit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comienza descargando PoEdit</h1>
+
+<ol>
+<li> PoEdit para <a href="http://bit.ly/1s7XycS">Linux</a>
+</li>
+<li> PoEdit para <a href="http://bit.ly/1TT9qso">Mac</a>
+</li>
+<li> PoEdit para <a href="http://bit.ly/1Tb61bB">Win</a>
+</li>
+</ol>
+
+<h1>
+<a id="iniciando-con-poedit" class="anchor" href="#iniciando-con-poedit" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Iniciando con PoEdit</h1>
+
+<p>Es necesario descargar todo el proyecto con las cadenas o bien ubicar el archivo en especifico, en cada carpeta o subcarpeta siempre se mostrará una ventana de lado derecho con las opciones para descargar y cargar(Adjuntar archivos localizados con PoEdit)</p>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/Pootle1.png" alt="Descargar o cargar un Archivo para traducir fuera de conexión"></p>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/pootllecargar.png" alt="Descargar o cargar"></p>
+
+<p>Tambien es necesario contar con una versión en español o trabajar directamente con las cadenas originales en inglés, debido a que cuando se descarga un archivo para trabajarlo fuera de conexión solo se muestra la cadena en inglés.</p>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/FileOriginal.png" alt="Cadenas originales"></p>
+
+<p>Localizando una cadena de palabras en Mixteco, tomando como referencia la versión en español.</p>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/meh1.png" alt="Español Mexicano"></p>
+
+<p><img src="https://raw.githubusercontent.com/Thonsom/GuideL10nMoznativo.github.io/gh-pages/images/meh1.png" alt="Mixteco"></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/Thonsom">Thonsom</a></p>
